src/main/java/com/example/stream/spring/courses/reactive/example/model/error/CollegeDeleteOk.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record CollegeDeleteOk() implements CollegeSuccess {
}
